finals coming hwe