@@ -1,7 +1,6 @@
 package duskatron.movement;
 
 import duskatron.Constants;
-import duskatron.arena.Arena;
 import duskatron.context.DuskatronContext;
 import duskatron.enemy.Enemy;
 import duskatron.math.Vec2D;
@@ -14,14 +13,19 @@ import java.util.List;
 
 import static java.lang.Math.*;
 
+/*
+    Minimum Risk Movement Wheel
+
+    Combine a bunch of constants to get the better sample
+    point based on closer bots, wall, energy level
+*/
 public class MrmWheel extends Wheel implements Constants {
 
     private final ArrayList<RiskPoint> currentRiskPoints = new ArrayList<>();
 
-    public MrmWheel(DuskatronContext ctx) {
-        super(ctx);
-    }
+    public MrmWheel(DuskatronContext ctx) { super(ctx); }
 
+    @Override
     public void move() {
 
         ArrayList<Enemy> enemies = new ArrayList<>(
@@ -34,15 +38,12 @@ public class MrmWheel extends Wheel implements Constants {
         double robotY = bot.robot().getY();
 
         for (int i = 0; i < MRM_POINT_COUNT; i++) {
+
             /*
-             * Robocode uses:
-             *   0 radians = north
-             *   PI / 2   = east
-             *
-             * Therefore:
-             *   x += sin(angle)
-             *   y += cos(angle)
-             */
+              Robocode uses:
+                0 radians =     north
+                PI / 2 =        east
+            */
             double angle = (PI * 2.0) * i / MRM_POINT_COUNT;
             double RANDOM_OFFSET = 50;
 
@@ -54,19 +55,13 @@ public class MrmWheel extends Wheel implements Constants {
                     robotY + cos(angle) * MRM_DISTANCE + randomY
             );
 
-            points.add(
-                    evaluateRisk(
-                            enemies,
-                            destination,
-                            angle
-                    )
-            );
+            points.add(evaluateRisk(enemies, destination, angle));
         }
 
         currentRiskPoints.clear();
         currentRiskPoints.addAll(points);
 
-        RiskPoint best = points.get(0);
+        RiskPoint best = points.getFirst();
 
         for (RiskPoint point : points) {
             if (point.totalRisk() < best.totalRisk()) {
@@ -74,38 +69,26 @@ public class MrmWheel extends Wheel implements Constants {
             }
         }
 
+        /*  TODO: choose the best method here  */
         goTo(best.location());
     }
 
-    private RiskPoint evaluateRisk(
-            List<Enemy> enemies,
-            Vec2D destination,
-            double movementAngle
-    ) {
-        double enemyRisk = getEnemyRisk(
-                enemies,
-                destination,
-                movementAngle
-        );
+    private RiskPoint evaluateRisk(List<Enemy> enemies, Vec2D destination, double movementAngle) {
 
-        double closestBotRisk = getClosestBotRisk(
-                enemies,
-                destination
-        );
-
-        double wallRisk = getWallRisk(
-                destination
-        );
+        /*  Get risk of enemies, closest bots and walls  */
+        double enemyRisk = getEnemyRisk(enemies, destination, movementAngle);
+        double closestBotRisk = getClosestBotRisk(enemies, destination);
+        double wallRisk = getWallRisk(destination);
 
         double trailRisk = getTrailRisk(
                 destination
         );
 
         double totalRisk =
-                  ENEMY_RISK_WEIGHT * enemyRisk
-                + CLOSEST_BOT_RISK_WEIGHT * closestBotRisk
-                + WALL_RISK_WEIGHT * wallRisk
-                + TRAIL_RISK_WEIGHT * trailRisk;
+                ENEMY_RISK_WEIGHT * enemyRisk
+                        + CLOSEST_BOT_RISK_WEIGHT * closestBotRisk
+                        + WALL_RISK_WEIGHT * wallRisk
+                        + TRAIL_RISK_WEIGHT * trailRisk;
 
         return new RiskPoint(
                 destination,
@@ -113,27 +96,25 @@ public class MrmWheel extends Wheel implements Constants {
                 closestBotRisk,
                 wallRisk,
                 trailRisk,
-                totalRisk
-        );
+                totalRisk);
     }
 
-    /**
-     * Enemy risk combines:
-     *
-     * - distance
-     * - perpendicularity
-     * - enemy energy
-     *
-     * Individual enemy risks are combined into a bounded [0, 1] value.
-     */
+    /*
+        Enemy risk combines:
+
+        - distance
+        - perpendicularity
+        - enemy energy
+
+        Individual enemy risks are combined
+        into a bounded [0, 1] value
+    */
     private double getEnemyRisk(
             List<Enemy> enemies,
             Vec2D destination,
-            double movementAngle
-    ) {
-        if (enemies.isEmpty()) {
-            return 0.0;
-        }
+            double movementAngle) {
+
+        if (enemies.isEmpty()) { return 0.0; }
 
         double risk = 0.0;
 
@@ -144,30 +125,23 @@ public class MrmWheel extends Wheel implements Constants {
 
             Vec2D enemyPosition = enemy.getPosition();
 
-            // Distance from the candidate destination to the enemy.
-            double distance =
-                    sqrt(destination.distanceSq(enemyPosition));
+            /*  Distance from the candidate destination to the enemy  */
+            double distance = destination.distance(enemyPosition);
 
-            // Close enemies are more dangerous.
-            double distanceRisk =
-                    exp(-distance / ENEMY_DISTANCE_SCALE);
+            /*  Close enemies are more dangerous  */
+            double distanceRisk = exp(-distance / ENEMY_DISTANCE_SCALE);
 
-            // Direction from our candidate position to the enemy.
-            double enemyBearing =
-                    atan2(
-                            enemyPosition.x - destination.x,
-                            enemyPosition.y - destination.y
-                    );
+            /* Direction from our candidate point to the enemy  */
+            double enemyBearing = atan2(
+                    enemyPosition.x - destination.x,
+                    enemyPosition.y - destination.y);
 
-            // Diamond-style orbital movement:
-            // perpendicular = safer, toward/away = more dangerous.
-            double angleDifference =
-                    Utils.normalRelativeAngle(
-                            movementAngle - enemyBearing
-                    );
-
-            double orbitalRisk =
-                    0.25 + 0.75 * abs(cos(angleDifference));
+            /*
+                Diamond-style orbital movement
+                perpendicular = safer, toward = more dangerous
+             */
+            double angleDifference = Utils.normalRelativeAngle(movementAngle - enemyBearing);
+            double orbitalRisk = 0.25 + 0.75 * abs(cos(angleDifference));
 
             risk += distanceRisk * orbitalRisk;
         }
@@ -175,17 +149,8 @@ public class MrmWheel extends Wheel implements Constants {
         return Math.clamp(risk, 0.0, 1.0);
     }
 
-    /**
-     * Penalizes destinations where we would be the closest bot
-     * to another enemy.
-     *
-     * In a true 1v1 this becomes constant, which is correct:
-     * there is no alternative bot that can be closer.
-     */
-    private double getClosestBotRisk(
-            List<Enemy> enemies,
-            Vec2D destination
-    ) {
+    private double getClosestBotRisk(List<Enemy> enemies, Vec2D destination) {
+
         if (enemies.size() < 2) {
             return 0.0;
         }
@@ -200,8 +165,7 @@ public class MrmWheel extends Wheel implements Constants {
 
             validEnemies++;
 
-            double ourDistanceSq =
-                    destination.distanceSq(enemy.getPosition());
+            double ourDistanceSq = destination.distanceSq(enemy.getPosition());
 
             boolean weAreClosest = true;
 
@@ -210,9 +174,7 @@ public class MrmWheel extends Wheel implements Constants {
                     continue;
                 }
 
-                double otherDistanceSq =
-                        other.getPosition()
-                                .distanceSq(enemy.getPosition());
+                double otherDistanceSq = other.getPosition().distanceSq(enemy.getPosition());
 
                 if (otherDistanceSq < ourDistanceSq) {
                     weAreClosest = false;
@@ -220,124 +182,68 @@ public class MrmWheel extends Wheel implements Constants {
                 }
             }
 
-            if (weAreClosest) {
-                threatenedEnemies++;
-            }
+            if (weAreClosest) { threatenedEnemies++; }
         }
-
-        if (validEnemies == 0) {
-            return 0.0;
-        }
+        if (validEnemies == 0) { return 0.0;}
 
         return (double) threatenedEnemies / validEnemies;
     }
 
-    /**
-     * Wall risk:
-     *
-     * 0 = comfortably inside the arena
-     * 1 = touching/crossing the desired wall margin
-     */
+    /*  Wall risk  */
     private double getWallRisk(Vec2D position) {
+
         double fieldWidth = bot.arena().getWidth();
         double fieldHeight = bot.arena().getHeight();
 
         double distanceToWall = min(
-                min(
-                        position.x,
-                        fieldWidth - position.x
-                ),
-                min(
-                        position.y,
-                        fieldHeight - position.y
-                )
-        );
+                min(position.x, fieldWidth - position.x),
+                min(position.y, fieldHeight - position.y));
 
-        /*
-         * Candidate is outside the arena.
-         * Such a point should never be selected.
-         */
-        if (distanceToWall <= 0.0) {
-            return Double.POSITIVE_INFINITY;
-        }
 
-        /*
-         * No wall danger once we are safely beyond the margin.
-         */
-        if (distanceToWall >= WALL_MARGIN) {
-            return 0.0;
-        }
+        if (distanceToWall <= 0.0) { return Double.POSITIVE_INFINITY; }
+        if (distanceToWall >= WALL_MARGIN) { return 0.0; }
 
-        /*
-         * Quadratic increase as we approach the wall.
-         */
-        double closeness =
-                (WALL_MARGIN - distanceToWall)
-                        / WALL_MARGIN;
-
+        /*  Quadratic increase as we approach the wall  */
+        double closeness = (WALL_MARGIN - distanceToWall) / WALL_MARGIN;
         return closeness * closeness;
     }
 
-    /**
-     * Avoid recently visited positions.
-     *
-     * More recent positions receive more weight.
-     */
+    /*  Avoid recently visited positions  */
     private double getTrailRisk(Vec2D destination) {
-        List<Vec2D> history =
-                bot.wheel().getRecordedPositions();
 
-        if (history.isEmpty()) {
-            return 0.0;
-        }
+        List<Vec2D> history = bot.wheel().getRecordedPositions();
 
-        int count =
-                min(history.size(), TRAIL_LENGTH);
+        if (history.isEmpty()) { return 0.0; }
+
+        int count = min(history.size(), TRAIL_LENGTH);
 
         double weightedRisk = 0.0;
         double totalWeight = 0.0;
 
         for (int i = 0; i < count; i++) {
-            Vec2D oldPosition =
-                    history.get(history.size() - 1 - i);
 
-            double distance =
-                    sqrt(
-                            destination.distanceSq(oldPosition)
-                    );
+            Vec2D oldPosition = history.get(history.size() - 1 - i);
+            double distance = destination.distance(oldPosition);
+            double recency = (double) (count - i) / count;
 
             /*
-             * Recent positions matter more.
-             */
-            double recency =
-                    (double) (count - i) / count;
+                1 near the trail,
+                approaches 0 as distance increases.
+            */
+            double distanceRisk = exp(-distance / TRAIL_DISTANCE_SCALE);
 
-            /*
-             * 1 near the trail,
-             * approaches 0 as distance increases.
-             */
-            double distanceRisk =
-                    exp(-distance / TRAIL_DISTANCE_SCALE);
-
-            weightedRisk +=
-                    recency * distanceRisk;
-
+            weightedRisk += recency * distanceRisk;
             totalWeight += recency;
         }
 
-        if (totalWeight == 0.0) {
-            return 0.0;
-        }
+        if (totalWeight == 0.0) { return 0.0; }
 
         return weightedRisk / totalWeight;
     }
 
     /*
-     * ------------------------------------------------------------------------
-     * DEBUG VISUALIZATION
-     * ------------------------------------------------------------------------
-     */
-
+        USE OF AI:
+    */
     public void onPaint(Graphics2D g) {
         if (currentRiskPoints.isEmpty()) {
             return;
@@ -449,101 +355,6 @@ public class MrmWheel extends Wheel implements Constants {
         );
     }
 
-    /*
-     * ------------------------------------------------------------------------
-     * WALL SMOOTHING
-     * ------------------------------------------------------------------------
-     */
-
-    public double smoothHeading(
-            double desiredAngle,
-            double x,
-            double y,
-            Arena arena,
-            double margin
-    ) {
-        final double angleStep =
-                toRadians(WALL_SMOOTH_ANGLE_STEP);
-
-        double heading =
-                bot.robot().getHeadingRadians();
-
-        if (isSafeAtOffset(
-                desiredAngle,
-                x,
-                y,
-                heading,
-                arena,
-                margin,
-                LOOK_AHEAD_DIST
-        )) {
-            return desiredAngle;
-        }
-
-        for (int i = 1; i <= WALL_SMOOTH_MAX_STEPS; i++) {
-            double offset =
-                    angleStep * i;
-
-            double left =
-                    desiredAngle - offset;
-
-            if (isSafeAtOffset(
-                    left,
-                    x,
-                    y,
-                    heading,
-                    arena,
-                    margin,
-                    LOOK_AHEAD_DIST
-            )) {
-                return left;
-            }
-
-            double right =
-                    desiredAngle + offset;
-
-            if (isSafeAtOffset(
-                    right,
-                    x,
-                    y,
-                    heading,
-                    arena,
-                    margin,
-                    LOOK_AHEAD_DIST
-            )) {
-                return right;
-            }
-        }
-
-        return desiredAngle;
-    }
-
-    private boolean isSafeAtOffset(
-            double offset,
-            double x,
-            double y,
-            double currentHeading,
-            Arena arena,
-            double margin,
-            double lookAhead
-    ) {
-        double absoluteHeading =
-                currentHeading + offset;
-
-        double projectedX =
-                x + lookAhead * sin(absoluteHeading);
-
-        double projectedY =
-                y + lookAhead * cos(absoluteHeading);
-
-        return isInsideSafeRect(
-                projectedX,
-                projectedY,
-                arena.getWidth(),
-                arena.getHeight(),
-                margin
-        );
-    }
 
     public record RiskPoint(
             Vec2D location,
@@ -552,6 +363,5 @@ public class MrmWheel extends Wheel implements Constants {
             double wallRisk,
             double trailRisk,
             double totalRisk
-    ) {
-    }
+    ) { }
 }
